# tracksdata

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NOTES  README.md  asv.conf.json  mkdocs.yml  pyproject.toml
.codex/environments/: environment.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: labeler.yml  pull_request_template.md  python-versions.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  benchmarks.yml  changelog.yml  ci.yaml  ci.yml  docs.yml  release.yml
benchmarks/: .gitignore  __init__.py  asv.conf.json  common.py  graph_backends.py  graph_mutations.py  graph_workflow.py  perf_chunk_coalescing.py  perf_pickle_and_overrides.py  sql_indexing.py  tracklet_nodes.py
benchmarks/benchmarks/: graph_backends.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/concepts/: index.html
dev/contributing/: index.html
dev/examples/: basic.py  index.html
dev/faq/: index.html
dev/getting_started/: index.html
dev/installation/: index.html
dev/reference/tracksdata/: index.html
dev/reference/tracksdata/array/: index.html
dev/reference/tracksdata/attrs/: index.html
dev/reference/tracksdata/constants/: index.html
dev/reference/tracksdata/edges/: index.html
dev/reference/tracksdata/functional/: index.html
dev/reference/tracksdata/graph/: index.html
dev/reference/tracksdata/graph/filters/: index.html
dev/reference/tracksdata/io/: index.html
dev/reference/tracksdata/metrics/: index.html
dev/reference/tracksdata/nodes/: index.html
dev/reference/tracksdata/options/: index.html
dev/reference/tracksdata/solvers/: index.html
dev/reference/tracksdata/utils/: index.html
dev/search/: search_index.json
docs/: concepts.md  contributing.md  design_decisions.md  example.md  examples.md  faq.md  getting_started.md  installation.md
docs/examples/: basic.py
examples/: minimal.py  random_coords.py
src/tracksdata/: __about__.py  __init__.py  _filter.py  attrs.py  attrs.pyi  conftest.py  constants.py  expr.py  options.py
src/tracksdata/_test/: test_attrs.py  test_expr.py  test_options.py
src/tracksdata/array/: __init__.py  _base_array.py  _graph_array.py  _nd_chunk_cache.py
src/tracksdata/array/_test/: test_graph_array.py  test_nd_chunk_cache.py
src/tracksdata/attrs/: _attrs.py
src/tracksdata/base/: _array.py  _edges.py  _graph.py  _nodes.py  _solver.py
src/tracksdata/edges/: __init__.py  _base_edge_attrs.py  _base_edges.py  _base_weights.py  _distance_edges.py  _generic_edges.py  _iou_edges.py
src/tracksdata/edges/_test/: test_distance_edges.py  test_generic_edges.py  test_iou_edges.py
src/tracksdata/functional/: __init__.py  _apply.py  _division.py  _edges.py  _graph.py  _iou.py  _labeling.py  _napari.py  _rx.py
src/tracksdata/functional/_test/: test_apply.py  test_division.py  test_functional_edges.py  test_graph.py  test_iou.py  test_labeling.py  test_napari.py  test_rx.py
src/tracksdata/graph/: __init__.py  _base_filter.py  _base_graph.py  _graph_view.py  _indexed_filter.py  _mapped_graph_mixin.py  _overlap_modifier.py  _rustworkx_graph.py  _sql_graph.py  _utils.py
src/tracksdata/graph/_test/: test_graph_backends.py  test_graph_view_signals.py  test_index_graph.py  test_subgraph.py
src/tracksdata/graph/filters/: __init__.py  _base_filter.py  _indexed_filter.py  _spatial_filter.py
src/tracksdata/graph/filters/_test/: test_spatial_filter.py
src/tracksdata/io/: __init__.py  _ctc.py  _numpy_array.py
src/tracksdata/io/_test/: test_ctc_io.py
src/tracksdata/metrics/: __init__.py  _ctc_metrics.py  _matching.py  _traccuracy.py  _visualize.py
src/tracksdata/metrics/_test/: test_ctc_metrics.py  test_matching.py  test_metrics_visualize.py
src/tracksdata/nodes/: __init__.py  _base_node_attrs.py  _base_nodes.py  _crop_attrs.py  _generic_nodes.py  _mask.py  _nodes.py  _random.py  _regionprops.py
src/tracksdata/nodes/_test/: test_crop_attrs.py  test_generic_nodes.py  test_mask.py  test_random.py  test_regionprops.py
src/tracksdata/solvers/: __init__.py  _base_solver.py  _ilp_solver.py  _nearest_neighbors_solver.py
src/tracksdata/solvers/_test/: test_ilp_solver.py  test_nearest_neighbors_solver.py
src/tracksdata/utils/: __init__.py  _cache.py  _convert.py  _dataframe.py  _dtypes.py  _logging.py  _multiprocessing.py  _processing.py  _signal.py
src/tracksdata/utils/_test/: test_attr_key_dtype.py  test_dataframe.py  test_dtype_serialization.py  test_dtypes.py  test_processing.py
